<resources>
    <string name="app_name">DnDHelper</string>
    <string name="add">Dodaj</string>
    <string name="sub">Odejmij</string>
    <string name="rest">Odpoczynek</string>
    <string name="create_character">Stwórz nową postać</string>
    <string name="level_up">Level up!</string>
    <string name="hit_dice">Wynik rzutu kością</string>
    <string name="delete">Usuń</string>

    <string name="hit_points">Punkty Trafień</string>
    <string name="contusion">Stłuczenia</string>
    <string name="damage">Obrażenia</string>
    <string name="heal">Leczenie</string>

    <string name="money">Pieniądze</string>
    <string name="gold">Złoto</string>
    <string name="silver">Srebro</string>
    <string name="copper">Miedź</string>

    <string name="name">Nazwa:</string>
    <string name="level">Poziom:</string>
    <string name="components">Komponenty:</string>
    <string name="school">Szkoła:</string>
    <string name="range">Zasięg:</string>
    <string name="target">Cel:</string>
    <string name="duration">Czas trwania:</string>
    <string name="defense">Rzut obronny:</string>
    <string name="description">Opis:</string>

    <string name="touch">Dotyk</string>
    <string name="self">Rzucający</string>

    <string name="character_name">Imię postaci:</string>
    <string name="class_type">Klasa:</string>
    <string name="extra_school">Szkoła specjalna:</string>
    <string name="forbidden_school1">Szkoła zabroniona 1:</string>
    <string name="forbidden_school2">Szkoła zabroniona 2:</string>
    <string name="main_attribute_modifier">Modyfikator z atrybutu:</string>
    <string name="create">Stwórz</string>

    <string name="bard">Bard</string>
    <string name="cleric">Kapłan</string>
    <string name="druid">Druid</string>
    <string name="paladin">Paladyn</string>
    <string name="sorcerer">Zaklinacz</string>
    <string name="wizard">Czarodziej</string>
    <string name="rogue">Łotr</string>

    <string name="attribute">Atrybut:</string>
    <string name="strength">Siła</string>
    <string name="dexterity">Zręczność</string>
    <string name="constitution">Budowa</string>
    <string name="intelligence">Inteligencja</string>
    <string name="wisdom">Roztropność</string>
    <string name="charisma">Charyzma</string>
</resources>
